--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,9 @@ opencv-python-headless==4.10.0.84
 # PDF parsing
 pymupdf==1.24.13
 pdfplumber==0.11.4
-pdfminer.six==20250506
+# Remove the pdfminer.six line - pdfplumber will install the correct version
 
 # Data / validation
 pydantic==2.11.10
-numpy==2.0.2
+numpy>=1.24.0,<3.0.0
 pandas==2.2.3
