--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
 # Core app
-gradio==5.44.1
-transformers==4.56.1
-accelerate==0.34.2
+gradio==5.49.1
+transformers==4.57.1
+accelerate==1.10.1
 huggingface-hub==0.35.3
-safetensors>=0.4.5
+safetensors>=0.6.2
 tokenizers==0.22.1
 
 # OCR + imaging
 easyocr==1.7.2
 pillow==11.3.0
-opencv-python-headless==4.10.0.84
+opencv-python-headless==4.12.0.88
 
 # PDF parsing
-pymupdf==1.24.13
-pdfplumber==0.11.4
-# Remove the pdfminer.six line - pdfplumber will install the correct version
+pymupdf==1.26.5
+pdfplumber==0.11.7
 
 # Data / validation
-pydantic==2.11.10
+pydantic>=2.0,<2.12
 numpy>=1.24.0,<3.0.0
-pandas==2.2.3
+pandas==2.3.3
